--- a/Intro/template/my-introduction-card.html
+++ b/Intro/template/my-introduction-card.html
@@ -2,14 +2,64 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../styles/intro-card-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="resume-container">
         <div  class="left-view">
         <div class="image-container">
-            <hr>
+            <hr class="image-hr">
             <img  class="image-box" src="../image/convertedImg.png">
+            <hr class="image-hr">
+        </div>
+        <div class="info-card">
+            <div class="info-heading">
+                Contacts
+            </div>
             <hr>
+            <div class="info-contents">
+                <div class="info-content-data">
+                    <div class="icon-area fa fa-envelope"></div>
+                    <div class="icon-info-area">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=mailvivek71193@gmail.com" target="_blank">mailvivek71193@gmail.com</a>
+                    </div>
+                </div> 
+                <div class="info-content-data">
+                    <div class="icon-area fa fa-phone"></div>
+                    <div class="icon-info-area">
+                        +91-8652457348
+                    </div>
+                </div>
+                <div class="info-content-data">
+                    <div class="icon-area fa fa-birthday-cake"></div>
+                    <div class="icon-info-area">
+                        07-Nov-1993
+                    </div>
+                </div>
+                <div class="info-content-data">
+                    <div class="icon-area fa fa-building"></div>
+                    <div class="icon-info-area">
+                        #76 5th Cross Road,
+                        Banashankri, 3rd Stage,
+                        Bangalore-560085
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="info-card next">
+            <div class="info-heading">
+                Skills
+            </div>
+            <hr>
+            <div class="info-contents">
+                <ul>
+                    <li>Angular</li>
+                    <li>JavaScript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul> 
+
+            </div>
         </div>
         </div>
         <div  class="right-view">
