--- a/Intro/styles/index-style.css
+++ b/Intro/styles/index-style.css
@@ -15,4 +15,10 @@ object{
     width: 65%;
     border: 3px solid #ff0055;
     border-radius: 14px;
+    font-family: 'Roboto', open-sans;
+}
+@media (max-width: 768px) {
+    object {
+        width: 90%;
+    }
 }
