--- a/Intro/template/my-introduction-card.html
+++ b/Intro/template/my-introduction-card.html
@@ -52,12 +52,34 @@
             </div>
             <hr>
             <div class="info-contents">
-                <ul>
-                    <li>Angular</li>
-                    <li>JavaScript</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                </ul> 
+                <div class="skill-container">
+                    <div>Angular</div>
+                    <progress value="8.5" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>JavaScript</div>
+                    <progress value="7" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>HTML</div>
+                    <progress value="6.8" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>CSS/SCSS</div>
+                    <progress value="7.5" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>Redux</div>
+                    <progress value="8.5" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>GraphQL</div>
+                    <progress value="8.5" max="10"></progress>
+                </div>
+                <div class="skill-container">
+                    <div>ES-5/6</div>
+                    <progress value="7" max="10"></progress>
+                </div>
 
             </div>
         </div>
