Left side resume

--- a/Intro/template/my-introduction-card.html
+++ b/Intro/template/my-introduction-card.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="stylesheet" href="../styles/intro-card-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <div class="resume-container">
@@ -82,6 +85,48 @@
                 </div>
 
             </div>
+        </div>
+        <div class="info-card next info-contents">
+            <div class="info-heading ">
+                Hobbies
+            </div>
+            <hr>
+            <div class="info-content-data">
+                <div class="icon-area fas fa-swimmer"></div>
+                <div class="icon-info-area">
+                    Swimming
+                </div>
+                <div class="icon-area fas fa-basketball-ball"></div>
+                <div class="icon-info-area">
+                     Basketball
+                </div>
+            </div>
+            <div class="info-content-data">
+                <div class="icon-area fas fa-gamepad"></div>
+                <div class="icon-info-area">
+                    Video Game
+                </div>
+                <div class="icon-area fas fa-video"></div>
+                <div class="icon-info-area">
+                    Video Editing
+                </div>
+            </div>
+            
+            
+        </div>
+        <div class="next">
+            <div class="info-heading">
+                PDF Files
+            </div>
+            <hr>
+            <div class="info-contents">
+                <div class="skill-container" style="text-align: center;">
+                    <a href="/files/resume/Resume_VIVEK_5.5YR_web_developer(Jul21).pdf" download="Resume_VIVEK">
+                        <div class="pdf-size fa fa-file-pdf-o"></div>
+                    </a>
+                    <div>Download PDF Resume</div>
+                </div>
+            </div>    
         </div>
         </div>
         <div  class="right-view">
