--- a/Intro/styles/intro-card-style.css
+++ b/Intro/styles/intro-card-style.css
@@ -6,11 +6,12 @@ body {
 .resume-container {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: auto;
 }
 .left-view {
   flex: 30%;
-  background-color: #068d9ad9;
+  background-color: #1c2223d9;
+  /* background-color: #068d9ad9; */
   margin: 2px;
   border-radius: 10px;
   padding: 1%;
@@ -63,22 +64,33 @@ hr {
   margin-top: 5%;
 }
 .info-content-data {
-  margin-top: 4%;
+  margin-top: 5%;
   display: flex;
   flex-direction: row;
 }
 .icon-area {
-  flex: 12;
+  flex: 8;
 }
 .icon-info-area {
-  flex: 80;
+  flex: 38;
 }
 .skill-container {
   margin-top: 3%;
 }
 progress {
   width: 90%;
-  height: 1%;
+  height: 1vw;
+}
+.hobbies-wrap {
+  flex-wrap: wrap;
+}
+.download-area{
+    display: flex;
+    justify-content: center;
+}
+.pdf-size{
+    font-size: 3vw !important;
+    cursor: pointer;
 }
 
 a {
@@ -91,5 +103,8 @@ a {
   .image-box {
     height: 4rem;
     width: 4rem;
+  }
+  .resume-container {
+    height: 100%;
   }
 }
