Left side resume

--- a/Intro/template/my-introduction-card.html
+++ b/Intro/template/my-introduction-card.html
@@ -121,7 +121,7 @@
             <hr>
             <div class="info-contents">
                 <div class="skill-container" style="text-align: center;">
-                    <a href="/files/resume/Resume_VIVEK_5.5YR_web_developer(Jul21).pdf" download="Resume_VIVEK">
+                    <a href="../files/resume/Resume_VIVEK_5.5YR_web_developer(Jul21).pdf" download="Resume_VIVEK">
                         <div class="pdf-size fa fa-file-pdf-o"></div>
                     </a>
                     <div>Download PDF Resume</div>
