--- a/Intro/template/my-introduction-card.html
+++ b/Intro/template/my-introduction-card.html
@@ -1,6 +1,7 @@
 
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/intro-card-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
@@ -130,7 +131,65 @@
         </div>
         </div>
         <div  class="right-view">
-            Right
+            <div></div>
+            <h2 class="head-text-style">VIVEK KUMAR</h2>
+            <h4 class="subheding">SENIOR SOFTWARE DEVELOPER</h4>
+            <p class="intro-text-size">Technically versatile developer with 5+ years of experience 
+            in <b>providing digital solution </b>for given business requirement. Being a developer I look 
+        forward to learn and work with any technical stack to simplify digital needs. I have mostly used Angular 
+    framework for making web application throughout my carrier   </p>
+    <div class="experience-content">
+        <h4 class="subheding"><i class="fad fa-search"></i>Knowledge</h4>
+        <div class=card-content>
+            <div class="knowledge-heading">
+                With ongoing development process i have came across several features and utilities. 
+            </div>
+            <div class="knowledge-area">
+                <div class=knowledge-left>
+                    <div><i class="far fa-sitemap"></i>NRWL-NX architecture</div>
+                    <div><i class="fas fa-phone-laptop"></i>Progressive Web Application (PWA)</div>
+                    <div><i class="fad fa-vial"></i>Unit testing</div>
+                    <div><i class="fas fa-lock"></i>Crypto Js </div>
+                    <div><i class="fas fa-code-branch"></i>SVN repository </div>
+                </div>
+                <div class=knowledge-left>
+                    <div><i class="far fa-sitemap"></i>MVP Pattern</div>
+                    <div><i class="fas fa-sync-alt"></i>Agile</div>
+                    <div><i class="fas fa-brackets-curly"></i>RESTful API </div>
+                    <div><i class="fab fa-google"></i>Google Analytics Service </div>
+                    <div><i class="fab fa-github"></i>GitHub/Gitlab</div>
+                </div>
+            </div>     
+        </div>
+    </div>
+    <div class="experience-content">
+        <h4 class="subheding"><i class="fas fa-laptop-code"></i>Experience</h4>
+        <div class=card-content>
+            <div class="company-name">
+               <b> Senior Software Engineer - CSS Corp. <b>
+                <div><b>Oct-2020-Till Date<b></div>
+            </div>
+            <div class=company-desc>
+                <b>Project Undertaken</b>
+
+            </div>
+            
+
+        </div>
+        <div class=card-content>
+            hi
+        </div>
+    </div>
+    <div class="experience-content">
+        <h4 class="subheding"><i class="fas fa-user-graduate"></i>Education</h4>
+        <div class=card-content>
+            hi
+        </div>
+        <div class=card-content>
+            hi
+        </div>
+    </div>
+
         </div>
     </div>
 </body>
